--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # 在wwww同级目录下添加该.gitignore文件，taobao改为你的项目名
 /*
+!.gitignore
 !www/
 !*.md
 www/*
@@ -11,7 +12,7 @@ www/taobao/*
 !www/taobao/admin/
 
 www/taobao/admin/*
-#包含cofig文件夹
+#包含config文件夹
 !www/taobao/admin/config/
 #包含controllers文件夹
 !www/taobao/admin/controllers/
